# medicare-pro-v2

./: .editorconfig  .env.example  .gitcommitmsg  .gitignore  AUDITORIA_PANTALLA_AZUL.md  CNAME  CONTRIBUTING.md  DEPLOY_GUIDE.md  Dockerfile  FIX_PANTALLA_AZUL_INSTRUCCIONES.md  INFORME_FINAL_MEDICARE_PRO.md  MANUAL_USUARIO_MEDICARE_PRO.md  Makefile  README.md  REPORTE_NOCTURNO.md  RESUMEN_MEJORAS_GENERALES.md  _migrate_cache.py  _test_import.py  _tmp_css_search.py  analizar_supabase.py  app.py  auto_healing.bat  buscar_filas.py  buscar_usuarios_sql.py  desactivar_rls.sql  diagnostico_total.py  docker-compose.yml  fix_guardado_critico.py  generar_informe_pdf.py  generar_manual_pdf.py  limpiar_duplicados.py  listar_tablas.py  main.py  main_login_fixed.py  main_medicare.py  main_test.py  migrar_auditoria.py  migrar_gestion.py  migrar_turnos_estudios.py  opencode.json  (+23 more)
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: branch-protection-setup.md  dependabot.yml
.streamlit/: backup_antes_limpieza_20260417_012055.json  backup_antes_recuperacion_20260417_012017.json  backup_local_before_dario_restore_20260416_235648.json  backup_remote_before_patient_list_fix_20260416_233759.json  backup_remote_before_restore_20260416_231739.json  backup_remote_before_strong_recovery_20260416_233552.json  config.toml  local_data_backup_urgente.json  recovery_sql_export_20260416_233552.json  secrets.toml.example  secrets_fixed.toml  strong_recovery_forensic_report_20260416_233727.json  strong_recovery_plus_forensic_20260416_233727.json
alembic/: alembic.ini  (+1 more)
(+1163 files in other folders)
